--- a/APHTTPMonitor/Assets/row.html
+++ b/APHTTPMonitor/Assets/row.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="d-flex align-items-center ms-auto ml-3">
-            <i class="bi bi-chevron-right" style="font-size: 1rem;"></i>
+            <i class="bi bi-chevron-down" style="font-size: 1rem;"></i>
         </div>
     </div>
 </a>
