Started implementation of request's details

--- a/APHTTPMonitor/Assets/detail.html
+++ b/APHTTPMonitor/Assets/detail.html
@@ -1,3 +1,4 @@
+
 <html>
     
     <head>
@@ -35,9 +36,7 @@
             <button class="btn btn-outline-light my-2 my-sm-0" onclick="document.location.reload()">Refresh</button>
         </nav>
         <div class="container mt-6 mb-3">
-            <div class="list-group">
-                {requests-list}
-            </div>
+            <h1>Dettaglio della request {row-id}</h1>
         </div>
         <!-- jQuery -->
         <script
