--- a/APHTTPMonitor/Assets/row.html
+++ b/APHTTPMonitor/Assets/row.html
@@ -1,4 +1,4 @@
-<a class="list-group-item list-group-item-action d-flex" href="#">
+<a class="list-group-item list-group-item-action d-flex" href="/detail-{row-id}" target="_blank">
     <div class="d-flex w-100">
         <div class="flex-grow-1">
             <div class="row">
@@ -10,13 +10,13 @@
             <div class="row">
                 <div class="col">
                     <p class="text-break text-truncate-multiline">
-                        <small>{url}</small>
+                    <small>{url}</small>
                     </p>
                 </div>
             </div>
         </div>
         <div class="d-flex align-items-center ms-auto ml-3">
-            <i class="bi bi-chevron-down" style="font-size: 1rem;"></i>
+            <i class="bi bi-chevron-right" style="font-size: 1rem;"></i>
         </div>
     </div>
 </a>
