--- a/APHTTPMonitor/Assets/index.html
+++ b/APHTTPMonitor/Assets/index.html
@@ -17,7 +17,7 @@
                 margin-top: 6rem;
             }
         </style>
-        <!-- <meta http-equiv="refresh" content="60" /> -->
+         <meta http-equiv="refresh" content="30" /> 
     </head>
     
     <body>
