--- a/APHTTPMonitor/Assets/detail.html
+++ b/APHTTPMonitor/Assets/detail.html
@@ -125,7 +125,7 @@
     <div class="container mt-6 mb-3">
         <div class="jumbotron">
             <h1>Dettaglio della request #{row-id}</h1>
-            <p class="lead">
+            <p class="lead text-break">
                 {req-url}
             </p>
             <p>
