--- a/APHTTPMonitor/Assets/row.html
+++ b/APHTTPMonitor/Assets/row.html
@@ -3,7 +3,13 @@
         <div class="flex-grow-1">
             <div class="row">
                 <div class="col d-flex justify-content-between">
-                    <h6>{method}</h6>
+                    <h6>#{row-id}</h6>
+                    <small class="ms-auto">{date}</small>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-between">
+                    <h5>{method}</h5>
                     <span class="badge badge-{status-color} align-self-center ms-auto">{status-code}</span>
                 </div>
             </div>
