--- a/APHTTPMonitor/Assets/web/index.html
+++ b/APHTTPMonitor/Assets/web/index.html
@@ -4,19 +4,7 @@
         <title>APHTTPMonitor</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-        <style>
-            .text-truncate-multiline {
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                -webkit-line-clamp: 3;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-            
-            .mt-6 {
-                margin-top: 6rem;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css" type="text/css">
          <meta http-equiv="refresh" content="10" />
     </head>
     
