--- a/APHTTPMonitor/Assets/web/detail.html
+++ b/APHTTPMonitor/Assets/web/detail.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>APHTTPMonitor</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -8,17 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
-
 <body>
-
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <span class="navbar-brand mb-0 h1">APHTTPMonitor</span>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Requests</a>
+                <a class="nav-link" href="/">Requests</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
         </ul>
         <button class="btn btn-outline-light my-2 my-sm-0" onclick="document.location.reload()">Refresh</button>
@@ -93,5 +90,4 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
