--- a/APHTTPMonitor/Assets/web/index.html
+++ b/APHTTPMonitor/Assets/web/index.html
@@ -3,8 +3,9 @@
         <title>APHTTPMonitor</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-        <link rel="stylesheet" href="styles.css" type="text/css">
-         <meta http-equiv="refresh" content="10" />
+        <link rel="stylesheet" href="styles.css" type="text/css" />
+        <meta charset="UTF-8" />
+        <meta http-equiv="refresh" content="10" />
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
